# amla_at_1_krml

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/amla_at_1_my_krml/: __init__.py
src/amla_at_1_my_krml/data/: sets.py
src/amla_at_1_my_krml/models/: performance.py
tests/: test_amla_at_1_my_krml.py
