[tool.poetry]
name = "amla_at_1_my_krml"
version = "2024.0.1.9"
description = "Diliyaer_Duolikun_24697409_amla_at_1_my_krml"
authors = ["amla_at_1_my_krml"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
